--- a/.github/workflows/clojure.yml
+++ b/.github/workflows/clojure.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install clojure tools
         uses: DeLaGuardo/setup-clojure@3.7
+        with:
+          cli: 1.10.1.693
       - name: Install dependencies
         run: clojure -A:dev:test -P
       - name: Run tests
